<resources>
    <string name="app_name">SubmatixBTLogger</string>
    <string name="app_name_light">SubmatixBTLogger LIGHT</string>
    <string name="title_area_detail">Detail</string>
    <string name="app_description">this app connects with SUBMATIX SPX42 an read logs or read \/write configuration of this device</string>
    <string name="app_description_light">this app connects with SUBMATIX SPX42 an read \/write configuration of this device</string>
    <string name="dummy_filler">SUBMATIX BT Config</string>
    <string name="app_bt_service">BluethootService</string>
    <string name="app_locale_timeformat_date">yyyy/MM/dd hh:mm:ss a</string>
    <string name="app_version_prefix">Version</string>
    <string name="app_build_prefix">Build</string>
    <string name="app_build_date_prefix">Build date</string>
    <string name="app_programmer_name">programm by: Dirk Marciniak</string>
    <string name="app_unit_depth_metric">meters</string>
    <string name="app_unit_minute">min</string>
    <string name="app_empty"> </string>
    <string name="about_headline">About SubmatixBTLogger</string>
    <string name="progitem_connect">Connection</string>
    <string name="progitem_spx_status">SPX42 Status</string>
    <string name="progitem_config">SPX42 Config</string>
    <string name="progitem_gaslist">Gases editing</string>
    <string name="progitem_logging">Logfiles read</string>
    <string name="progitem_loggraph">Visualize logs</string>
    <string name="progitem_loggraph_detail">Visualize logs detail</string>
    <string name="progitem_export">Export logs</string>
    <string name="progitem_progpref">Program prefs</string>
    <string name="progitem_about">About program</string>
    <string name="progitem_exit">EXIT</string>
    <string name="toast_exit">exiting app</string>
    <string name="toast_exit_nobt">exiting app NO BT ADAPTER!</string>
    <string name="toast_bt_enabled">bluethooth enabled!</string>
    <string name="toast_dummy">communicate</string>
    <string name="toast_comm_timeout">communication timeout!</string>
    <string name="toast_comm_set_autosetpoint">send O2 setpoint</string>
    <string name="toast_comm_set_autosetpoint_ok">send O2 setpoint: OK</string>
    <string name="toast_comm_set_autosetpoint_alert">send O2 setpoint: ERROR</string>
    <string name="toast_comm_set_deco">send deco settings</string>
    <string name="toast_comm_set_deco_ok">send deco settings: OK</string>
    <string name="toast_comm_set_deco_alert">send deco settings: ERROR</string>
    <string name="toast_comm_set_display">send display settings</string>
    <string name="toast_comm_set_display_ok">send display settings: OK</string>
    <string name="toast_comm_set_display_alert">send display settings: ERROR</string>
    <string name="toast_comm_set_individuals">send individual settings</string>
    <string name="toast_comm_set_individuals_ok">send individual settings: OK</string>
    <string name="toast_comm_set_individuals_alert">send individual settings: ERROR</string>
    <string name="toast_comm_set_units">send unit settings</string>
    <string name="toast_comm_set_units_ok">send unit settings: OK</string>
    <string name="toast_comm_set_units_alert">send unit settings: ERROR</string>
    <string name="toast_comm_set_gas">send gas setup</string>
    <string name="toast_comm_set_gas_count" formatted="false">send gas #%02d from #%02d</string>
    <string name="toast_comm_set_gas_ok">send gas setup: OK</string>
    <string name="toast_comm_set_gas_alert">send gas setup: ERROR</string>
    <string name="toast_read_logdir_no_selected_entrys">Not entrys selected yet!</string>
    <string name="toast_connect_connected">connected to &lt;%s&gt;</string>
    <string name="toast_connect_disconnected">connection disconnected</string>
    <string name="toast_connect_cant_bt_connect">can not connect to &lt;%s&gt;</string>
    <string name="toast_connect_device_paired">device %s was paired</string>
    <string name="toast_connect_device_pairing_request">device %s pairing requested</string>
    <string name="toast_connect_device_automatic_pairing">pairing automatic device %s</string>
    <string name="toast_export_cant_create_dir">can\'t create dir &lt;%s&gt;</string>
    <string name="toast_export_cant_find_xmldata">can\'t find data-xml file</string>
    <string name="toast_export_internal_xml_error">internal XML-DOM-Error!</string>
    <string name="dialog_sure_exit">Are you sure?</string>
    <string name="dialog_exit_button">EXIT</string>
    <string name="dialog_cancel_button">Cancel</string>
    <string name="dialog_understand_button">understanding</string>
    <string name="dialog_please_wait_title" formatted="false">please wait...</string>
    <string name="dialog_please_wait_read_config" formatted="false">read SPX config...</string>
    <string name="dialog_alias_edit_title">Edit alias for Device</string>
    <string name="dialog_save_button">Save</string>
    <string name="dialog_sqlite_error_header">Database ERROR</string>
    <string name="dialog_sqlite_nodatabase_error">no database found or\ndatabase can not open/create!\nprogram must abort!</string>
    <string name="dialog_error_database_dir_header">Database directory</string>
    <string name="spacer_string">spacer</string>
    <string name="conf_headline">Config SPX42</string>
    <string name="conf_setpoint_header">SETPOINT</string>
    <string name="conf_autoset_label">autosetpoint</string>
    <string name="conf_autoset_default">5</string>
    <string name="conf_highset_header">select whished higsetpoint</string>
    <string name="conf_highset_default">1.0</string>
    <string name="conf_deco_header">DECOMPRESSION</string>
    <string name="conf_deco_preset_header">select preset</string>
    <string name="conf_deco_presets_summary">current selected preset is \"%s\"</string>
    <string name="conf_deco_presets_default">30:85</string>
    <string name="conf_deco_last_stop_header">depth for last stop</string>
    <string name="conf_deco_last_stop_on">3m</string>
    <string name="conf_deco_last_stop_off">6m</string>
    <string name="conf_deco_last_stop_on_summary">last stop in 3 meters</string>
    <string name="conf_deco_last_stop_off_summary">last stop in 6 meters</string>
    <string name="conf_deco_dyn_gradients_header">dyn. gradients</string>
    <string name="conf_deco_dyn_gradients_on">Dyn.</string>
    <string name="conf_deco_dyn_gradients_off">OFF</string>
    <string name="conf_deco_dyn_gradients_summary_on">dyn gradients are active</string>
    <string name="conf_deco_dyn_gradients_summary_off">dyn gradients are inactive</string>
    <string name="conf_deco_deppstops_header">deep stops</string>
    <string name="conf_deco_deepstops_summary_on">deep stops are active</string>
    <string name="conf_deco_deppstops_summary_off">deep stops are inactive</string>
    <string name="conf_deco_deepstops_on">deep stop</string>
    <string name="conf_deco_deepstops_off">no deep</string>
    <string name="conf_display_header">DISPLAY</string>
    <string name="conf_display_luminance_header">luminance</string>
    <string name="conf_luminance_default">100</string>
    <string name="conf_display_orientation_header">display orientation</string>
    <string name="conf_display_orientation_default">0</string>
    <string name="conf_units_header">SPX42 UNITS</string>
    <string name="conf_units_temp_header">unit for temperature</string>
    <string name="conf_units_temp_metric">celsius</string>
    <string name="conf_units_temp_fahrenheid">fahrenheid</string>
    <string name="conf_units_temp_metric_summary">temperature ist in celsius</string>
    <string name="conf_units_temp_fahrenheid_summary">temperature unit is fahrenheid</string>
    <string name="conf_units_depth_header">unit for depth</string>
    <string name="conf_units_depth_meters">meters</string>
    <string name="conf_units_depth_foot">foot</string>
    <string name="conf_units_depth_meters_summary">depth is in meters</string>
    <string name="conf_units_depth_foot_summary">depth is in foot</string>
    <string name="conf_units_watertype_header">type of water</string>
    <string name="conf_units_freshwater">freshwater</string>
    <string name="conf_units_saltwater">salty water</string>
    <string name="conf_units_freshwater_summary">property is freshwater</string>
    <string name="conf_units_saltwater_summary">property is salty water</string>
    <string name="conf_ind_header">Individuals</string>
    <string name="conf_ind_sensors_onoff_header">switch sensors on or off</string>
    <string name="conf_ind_sensors_text_on">ON</string>
    <string name="conf_ind_sensors_text_off">OFF</string>
    <string name="conf_ind_sensors_text_on_summary">sensors are on</string>
    <string name="conf_ind_sensors_text_off_summary">sensors are OFF!</string>
    <string name="conf_ind_pscr_onoff_header">switch PSCR Mode</string>
    <string name="conf_ind_pscr_text_on">ON</string>
    <string name="conf_ind_pscr_text_off">OFF</string>
    <string name="conf_ind_pscr_summary_on">the pscr mode is on</string>
    <string name="conf_ind_pscr_summary_off">the pscr mode is off</string>
    <string name="conf_ind_count_sensorwarning_header">sensor warnings</string>
    <string name="conf_ind_count_default">3</string>
    <string name="conf_ind_acoustic_warning_header">acoustic warnings</string>
    <string name="conf_ind_acoustic_warning_on">ON</string>
    <string name="conf_ind_acoustic_warning_off">OFF</string>
    <string name="conf_ind_acoustic_warning_on_summary">acoustic warnings are on</string>
    <string name="conf_ind_acoustic_warning_off_summary">acoustic warnings are off</string>
    <string name="conf_ind_interval_header">loginterval</string>
    <string name="conf_ind_interval_default">60</string>
    <string name="connect_discover_button_title">Discover BT Devices</string>
    <string name="connect_button_off_text">ON/OFF</string>
    <string name="conf_gaslist_headline">SPX42 gaslist edit</string>
    <string name="conf_gaslist_default">21:0:79:0:0:0</string>
    <string name="conf_gaslist_o2">O2</string>
    <string name="conf_gaslist_he">HE</string>
    <string name="conf_gaslist_n2">N2</string>
    <string name="conf_gaslist_gas01_header">gas #01</string>
    <string name="conf_gaslist_gas02_header">gas #02</string>
    <string name="conf_gaslist_gas03_header">gas #03</string>
    <string name="conf_prog_headline">app preferences</string>
    <string name="conf_prog_filesystem">FILESYSTEM PREFERENCES</string>
    <string name="conf_prog_datadir">data dir</string>
    <string name="conf_prog_showall_header">show all new logentrys?</string>
    <string name="conf_prog_showall_on_summary">showing all logentrys</string>
    <string name="conf_prog_showall_off_summary">"showing only new logentrys "</string>
    <string name="conf_prog_showall_on">SHOW</string>
    <string name="conf_prog_showall_off">NO</string>
    <string name="conf_prog_mail_header">MAILCONFIG</string>
    <string name="conf_prog_mail_main">main reciver</string>
    <string name="conf_prog_mail_2nd">cc reciver</string>
    <string name="conf_prog_mail_compressed_header">compress uddf</string>
    <string name="conf_prog_mail_compressed_on_summary">uddf file will compressed</string>
    <string name="conf_prog_mail_compressed_off_summary">uddf file will NOT compressed</string>
    <string name="conf_prog_others_header">OTHERS</string>
    <string name="conf_prog_others_theme_header">switch theme</string>
    <string name="conf_prog_others_on_dark">dark</string>
    <string name="conf_prog_others_off_light">light</string>
    <string name="conf_prog_others_on_dark_summary">app theme DARK selected</string>
    <string name="conf_prog_others_off_light_summary">app theme LIGHT selected</string>
    <string name="export_change_drive_button">Device...</string>
    <string name="export_delete_button">DELETE</string>
    <string name="export_do_export">Export!</string>
</resources>