<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/conf_headline" android:key="keyConfig">
    
     <!-- Kategorie _Highsetpoint auto/off -->
    <PreferenceCategory android:title="@string/conf_setpoint_header" android:key="keySetpoint">
      <ListPreference 
          android:key="keySetpointAutosetpointDepth" 
          android:entryValues="@array/highsetpointDepthValuesArray" 
          android:title="@string/conf_autoset_label" 
          android:entries="@array/highsetpointDepthNamesArray"
          android:defaultValue="@string/conf_autoset_default"/>
      <ListPreference 
          android:key="keySetpointHighsetpointValue" 
          android:title="@string/conf_highset_header"
          android:entryValues="@array/highsetpointValuesArray" 
          android:entries="@array/highsetpointNamesArray" 
          android:defaultValue="@string/conf_highset_default"/>
    </PreferenceCategory>
    
    <!-- Voreinstellung Deco-Gradienten -->
    <PreferenceCategory android:title="@string/conf_deco_header" android:key="keyDeco">
        <ListPreference 
            android:entryValues="@array/gradientPresetValuesArray" 
            android:entries="@array/gradientPresetNamesArray" 
            android:title="@string/conf_deco_preset_header" 
            android:key="keyDecoGradientPresets" 
            android:summary="@string/conf_deco_presets_summary" 
            android:defaultValue="@string/conf_deco_presets_default"/>
        <de.dmarcini.submatix.android4.utils.NumberPickerPreference  
            android:title="@string/conf_deco_gradient_low" 
            android:key="keyDecoGradientLow" 
            android:defaultValue="@string/conf_deco_gradient_low_default"/>
        <de.dmarcini.submatix.android4.utils.NumberPickerPreference  
            android:title="@string/conf_deco_gradient_high" 
            android:key="keyDecoGradientHigh"
            android:defaultValue="@string/conf_deco_gradient_high_default"/>
        <SwitchPreference 
            android:key="keyDecoLastStop" 
            android:title="@string/conf_deco_last_stop_header" 
            android:switchTextOff="@string/conf_deco_last_stop_off" 
            android:switchTextOn="@string/conf_deco_last_stop_on" 
            android:summaryOff="@string/conf_deco_last_stop_off_summary" 
            android:summaryOn="@string/conf_deco_last_stop_on_summary" 
            android:defaultValue="true"/>
        <SwitchPreference 
            android:key="keyDecoDynGradients" 
            android:title="@string/conf_deco_dyn_gradients_header" 
            android:summaryOn="@string/conf_deco_dyn_gradients_summary_on" 
            android:summaryOff="@string/conf_deco_dyn_gradients_summary_off" 
            android:switchTextOn="@string/conf_deco_dyn_gradients_on" 
            android:switchTextOff="@string/conf_deco_dyn_gradients_off" 
            android:defaultValue="true"/>
        <SwitchPreference 
            android:key="keyDecoDeepStops" 
            android:title="@string/conf_deco_deppstops_header" 
            android:summaryOn="@string/conf_deco_deepstops_summary_on" 
            android:summaryOff="@string/conf_deco_deppstops_summary_off" 
            android:switchTextOn="@string/conf_deco_deepstops_on" 
            android:switchTextOff="@string/conf_deco_deepstops_off" 
            android:defaultValue="true"/>
        
    </PreferenceCategory>
      
    <!-- Einstellungen für die Anzeige -->
    <PreferenceCategory android:title="@string/conf_display_header" android:key="keyDisplay">
        <ListPreference 
            android:key="keyDisplayLuminance" 
            android:title="@string/conf_display_luminance_header" 
            android:entryValues="@array/displayLuminanceValuesArray" 
            android:entries="@array/displayLuminanceNamesArray" 
            android:defaultValue="@string/conf_luminance_default"/>
        <ListPreference 
            android:key="keyDisplayOrientation" 
            android:title="@string/conf_display_orientation_header" 
            android:entryValues="@array/displayOrientationValuesArray" 
            android:entries="@array/displayOrientationNamesArray" 
            android:defaultValue="@string/conf_display_orientation_default"/>
        
    </PreferenceCategory>
    
    <!-- Einstellungen für Einheiten -->
    <PreferenceCategory android:title="@string/conf_units_header" android:key="keyUnits">
        <SwitchPreference 
            android:key="keyUnitsIsTempMetric" 
            android:title="@string/conf_units_temp_header" 
            android:switchTextOff="@string/conf_units_temp_fahrenheid" 
            android:switchTextOn="@string/conf_units_temp_metric" 
            android:summaryOn="@string/conf_units_temp_metric_summary" 
            android:summaryOff="@string/conf_units_temp_fahrenheid_summary" 
            android:defaultValue="true"/>
        <SwitchPreference 
            android:title="@string/conf_units_depth_header" 
            android:key="keyUnitsIsDepthMetric" 
            android:summaryOff="@string/conf_units_depth_foot_summary" 
            android:summaryOn="@string/conf_units_depth_meters_summary" 
            android:switchTextOn="@string/conf_units_depth_meters" 
            android:switchTextOff="@string/conf_units_depth_foot" 
            android:defaultValue="true"/>
        <SwitchPreference 
            android:title="@string/conf_units_watertype_header" 
            android:key="keyUnitsIsFreshwater" 
            android:switchTextOff="@string/conf_units_saltwater" 
            android:switchTextOn="@string/conf_units_freshwater" 
            android:summaryOn="@string/conf_units_freshwater_summary" 
            android:summaryOff="@string/conf_units_saltwater_summary" 
            android:defaultValue="true"/>
        
    </PreferenceCategory>
    
    <!-- Individual-Einstellungen -->
    <PreferenceCategory android:key="keyIndividual" android:title="@string/conf_ind_header">
        <SwitchPreference 
            android:title="@string/conf_ind_sensors_onoff_header" 
            android:key="keyIndividualSensorsOn" 
            android:summaryOff="@string/conf_ind_sensors_text_off_summary" 
            android:summaryOn="@string/conf_ind_sensors_text_on_summary" 
            android:defaultValue="true" 
            android:switchTextOn="@string/conf_ind_sensors_text_on" 
            android:switchTextOff="@string/conf_ind_sensors_text_off"/>
        <SwitchPreference 
            android:title="@string/conf_ind_pscr_onoff_header" 
            android:key="keyIndividualPSCROn" 
            android:summaryOn="@string/conf_ind_pscr_summary_on" 
            android:summaryOff="@string/conf_ind_pscr_summary_off" 
            android:defaultValue="false" 
            android:switchTextOn="@string/conf_ind_pscr_text_on" 
            android:switchTextOff="@string/conf_ind_pscr_text_off"/>
        <ListPreference 
            android:key="keyIndividualCountSensorWarning" 
            android:title="@string/conf_ind_count_sensorwarning_header" 
            android:entries="@array/individualSensorsCountNamesArray" 
            android:entryValues="@array/individualSensorsCountValuesArray" 
            android:defaultValue="@string/conf_ind_count_default"/>
        <SwitchPreference 
            android:key="keyIndividualAcousticWarnings" 
            android:title="@string/conf_ind_acoustic_warning_header" 
            android:summaryOff="@string/conf_ind_acoustic_warning_off_summary" 
            android:summaryOn="@string/conf_ind_acoustic_warning_on_summary" 
            android:defaultValue="true" 
            android:switchTextOn="@string/conf_ind_acoustic_warning_on" 
            android:switchTextOff="@string/conf_ind_acoustic_warning_off"/>
        <ListPreference 
            android:entries="@array/individualIntervalNamesArray" 
            android:entryValues="@array/individualIntervalValuesArray" 
            android:key="keyIndividualLoginterval" 
            android:title="@string/conf_ind_interval_header" 
            android:defaultValue="@string/conf_ind_interval_default"/>
    </PreferenceCategory>
</PreferenceScreen>