<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/conf_prog_headline" android:id="@+id/conf_prog_preferencescreen">
    <de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory android:title="@string/conf_prog_filesystem" android:key="keyProgData">
        <EditTextPreference 
            android:title="@string/conf_prog_datadir" 
            android:key="keyProgDataDirectory" 
            android:defaultValue="null"/>
        <SwitchPreference 
            android:title="@string/conf_prog_showall_header" 
            android:switchTextOn="@string/conf_prog_showall_on" 
            android:summaryOn="@string/conf_prog_showall_on_summary" 
            android:switchTextOff="@string/conf_prog_showall_off" 
            android:summaryOff="@string/conf_prog_showall_off_summary" 
            android:key="keyProgShowAllLogentrys" 
            android:defaultValue="true"/>
        
    </de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory>
    
    <de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory android:title="@string/conf_prog_mail_header" android:key="keyProgMail">
        <EditTextPreference 
            android:title="@string/conf_prog_mail_main" 
            android:key="keyProgMailMain"/>
        <EditTextPreference 
            android:title="@string/conf_prog_mail_2nd" 
            android:key="keyProgMail2nd"/>
        <CheckBoxPreference 
            android:key="keyProgMailCompressed" 
            android:defaultValue="false" 
            android:title="@string/conf_prog_mail_compressed_header" 
            android:summaryOn="@string/conf_prog_mail_compressed_on_summary" 
            android:summaryOff="@string/conf_prog_mail_compressed_off_summary"/>
    </de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory>
    
    <de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory android:title="@string/conf_prog_others_header" android:key="keyProgOthers">
        <SwitchPreference 
            android:switchTextOff="@string/conf_prog_others_off_light" 
            android:switchTextOn="@string/conf_prog_others_on_dark" 
            android:title="@string/conf_prog_others_theme_header" 
            android:key="keyProgOthersThemeIsDark" 
            android:summaryOff="@string/conf_prog_others_off_light_summary" 
            android:summaryOn="@string/conf_prog_others_on_dark_summary" 
            android:defaultValue="true"/>
    </de.dmarcini.submatix.android4.utils.ColorizedPreferenceCategory>
    
    
    

</PreferenceScreen>