<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gasPickerLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alignmentMode="alignMargins"
    android:columnCount="3"
    android:orientation="horizontal"
    android:padding="6dp"
    android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/o2TextView"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/conf_gaslist_o2"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <NumberPicker
        android:id="@+id/o2NumberPicker"
        android:layout_column="0"
        android:layout_row="1"
        android:layout_gravity="center" >
    </NumberPicker>

    <TextView
        android:id="@+id/heTextView"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/conf_gaslist_he"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <NumberPicker
        android:id="@+id/heNumberPicker"
        android:layout_column="1"
        android:layout_row="1" 
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/n2TextView"
        android:layout_column="2"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/conf_gaslist_n2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <NumberPicker
        android:id="@+id/n2NumberPicker"
        android:layout_column="2"
        android:layout_row="1" 
        android:layout_gravity="center"/>

</GridLayout>